<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.myappmascotas.ContactoActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_titulo_contacto"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/t_elevation"
        android:hint="@string/app_nombre">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/t_elevation"
        android:hint="@string/app_email">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/app_comentario"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:lines="8"
        android:id="@+id/etMensaje"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnContacto"
        android:text="@string/app_btnContacto"
        android:layout_height="wrap_content" />
</LinearLayout>
</android.support.constraint.ConstraintLayout>
